# hydrone_deep_rl_jint

./: README.md
.git-rewrite/: backup-refs  commit  index  message  revs
hydrone_aerial_underwater_deep_rl/: CMakeLists.txt  package.xml
hydrone_aerial_underwater_deep_rl/launch/: bug_algorithm.launch  ddpg_3D.launch  deep_RL_2D.launch  deep_RL_2D_dinamic.launch  deep_RL_2D_sub.launch  hydrone_aerial_deep_rl.launch  hydrone_underwater_deep_rl.launch  lee_controller.launch
hydrone_aerial_underwater_deep_rl/models/goal_box/: model.sdf
hydrone_aerial_underwater_deep_rl/models/grey_wall/: model.config  model.sdf
hydrone_aerial_underwater_deep_rl/models/obstacle_1/: model.config  model.sdf
hydrone_aerial_underwater_deep_rl/models/obstacle_2/: model.config  model.sdf
hydrone_aerial_underwater_deep_rl/models/obstacle_3/: model.config  model.sdf
hydrone_aerial_underwater_deep_rl/scripts/: bug_algorithm.py  ddpg_air3D_hardtanh_3layers.py  ddpg_air3D_tanh_3layers.py  ddpg_air3D_tanh_lstm.py  environment_3D.py  respawnGoal_3D.py  sac_air3D_tanh_3layers.py  sac_air3D_tanh_lstm.py  store_disk.py  td3_air3D_tanh_3layers.py  td3_air3D_tanh_lstm.py  test_pid.py  velocity_air_2D.py  velocity_under_2D.py  wind.py
hydrone_aerial_underwater_deep_rl/worlds/: stage_1.world  stage_1_aerial.world  stage_2.world  stage_2_aerial.world  stage_3_aerial.world
hydrone_aerial_underwater_description/: CMakeLists.txt  package.xml
hydrone_aerial_underwater_description/meshes/: aerial_propeller_1.dae  aerial_propeller_2.dae  aquatic_propeller.dae  aquatic_propeller_1.dae
hydrone_aerial_underwater_description/robots/: hydrone_aerial_underwater_aerial.xacro  hydrone_aerial_underwater_underwater.xacro
hydrone_aerial_underwater_description/test/: test_urdf_files.py
hydrone_aerial_underwater_description/urdf/: VLP-16.urdf.xacro  component_snippets.xacro  hydrone_aerial_underwater_aerial.gazebo.xacro  hydrone_aerial_underwater_aerial_1080.gazebo.xacro  hydrone_aerial_underwater_base_aerial.xacro  hydrone_aerial_underwater_base_underwater.xacro  hydrone_aerial_underwater_underwater.gazebo.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro
hydrone_aerial_underwater_gazebo/: CMakeLists.txt  package.xml
hydrone_aerial_underwater_gazebo/launch/: hydrone_aerial_underwater.launch
hydrone_aerial_underwater_gazebo/resource/: hydrone.yaml  lee_controller_hydrone.yaml
hydrone_aerial_underwater_gazebo/worlds/: aerial_underwater.world  basic.world
(+2 files in other folders)
