<?xml version="1.0"?>
<package format="2">
  <name>hydrone_aerial_underwater_gazebo</name>
  <version>0.1.3</version>
  <description>Package controllers.</description>

  <maintainer email="ricardogrando13@gail.com">Ricardo Grando</maintainer>
  
  <author  email="ricardogrando13@gail.com">Ricardo Grando</author>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hydrone_aerial_underwater_description</exec_depend>  

  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>

</package>
